import { mount, shallowMount } from '@vue/test-utils'

import * as Stories from './MenuItemForm.stories'
import Component from './MenuItemForm.vue'

describe('components/menu-items/MenuItemForm', () => {
  describe('Default', () => {
    test('Default', async () => {
      const wrapper = mount(Stories.Default())
      await wrapper.vm.$nextTick()
      expect(wrapper.element).toMatchSnapshot()
    })
    test('Loading', async () => {
      const wrapper = mount(Stories.Loading())
      await wrapper.vm.$nextTick()
      expect(wrapper.element).toMatchSnapshot()
    })
    test('WithData', async () => {
      const wrapper = mount(Stories.WithData())
      await wrapper.vm.$nextTick()
      expect(wrapper.element).toMatchSnapshot()
    })
  })
  test('WithServings', async () => {
    const wrapper = mount(Stories.WithServings())
    await wrapper.vm.$nextTick()
    expect(wrapper.element).toMatchSnapshot()
  })
  test('WithoutServings', async () => {
    const wrapper = mount(Stories.WithoutServings())
    await wrapper.vm.$nextTick()
    expect(wrapper.element).toMatchSnapshot()
  })

  describe('Props & Computed', () => {
    test('isLoading', async () => {
      const wrapper = shallowMount(Component)
      expect(wrapper.vm.isLoading).toBe(false)

      wrapper.setProps({
        isLoading: true
      })
      await wrapper.vm.$nextTick()
      expect(wrapper.vm.isLoading).toBe(true)
    })
    test('withoutServings', async () => {
      const wrapper = shallowMount(Component)
      expect(wrapper.vm.withoutServings).toBe(false)

      wrapper.setProps({
        withoutServings: true
      })
      await wrapper.vm.$nextTick()
      expect(wrapper.vm.withoutServings).toBe(true)
    })
  })

  describe('methods', () => {
    test('onCancel()', async () => {
      const wrapper = shallowMount(Component)
      wrapper.vm.onCancel()
      await wrapper.vm.$nextTick()
      expect(wrapper.emitted().cancel).toBeTruthy()
    })
  })
})
